@@ -23,6 +23,7 @@
 #if wxUSE_DATAOBJ
 
 #ifndef WX_PRECOMP
+    #include "wx/dcmemory.h"
     #include "wx/intl.h"
     #include "wx/log.h"
     #include "wx/utils.h"
@@ -1042,10 +1043,42 @@ const wxChar *wxDataObject::GetFormatName(wxDataFormat format)
 // wxBitmapDataObject supports CF_DIB format
 // ----------------------------------------------------------------------------
 
+namespace
+{
+
+// Modify bitmap if necessary, i.e. if it uses 0RGB format in which alpha
+// channel is present but is entirely 0, to make it just plain RGB, i.e.
+// without alpha channel at all, to ensure compatibility with the applications
+// not recognizing the special case of 0RGB and handling such bitmaps as
+// completely transparent, see #17640.
+void RemoveAlphaIfNecessary(wxBitmap& bmp)
+{
+    // Replace 0RGB bitmap with its RGB copy to ensure compatibility with
+    // applications not recognizing bitmaps in 0RGB format, see #17640.
+    if ( bmp.GetDepth() == 32 && !bmp.HasAlpha() )
+    {
+        wxBitmap bmpRGB(bmp.GetSize(), 24);
+        {
+            wxMemoryDC dc(bmpRGB);
+            dc.DrawBitmap(bmp, 0, 0);
+        }
+
+        bmp = bmpRGB;
+    }
+}
+
+} // anonymous namespace
+
 size_t wxBitmapDataObject::GetDataSize() const
 {
 #if wxUSE_WXDIB
-    return wxDIB::ConvertFromBitmap(NULL, GetHbitmapOf(GetBitmap()));
+    wxBitmap& bmp = const_cast<wxBitmapDataObject*>(this)->m_bitmap;
+
+    // Note that we need to do this here too and not just in GetDataHere()
+    // because the size of the bitmap without the alpha channel is different.
+    RemoveAlphaIfNecessary(bmp);
+
+    return wxDIB::ConvertFromBitmap(NULL, GetHbitmapOf(bmp));
 #else
     return 0;
 #endif
@@ -1054,9 +1087,13 @@ size_t wxBitmapDataObject::GetDataSize() const
 bool wxBitmapDataObject::GetDataHere(void *buf) const
 {
 #if wxUSE_WXDIB
+    wxBitmap& bmp = const_cast<wxBitmapDataObject*>(this)->m_bitmap;
+
+    RemoveAlphaIfNecessary(bmp);
+
     BITMAPINFO * const pbi = (BITMAPINFO *)buf;
 
-    return wxDIB::ConvertFromBitmap(pbi, GetHbitmapOf(GetBitmap())) != 0;
+    return wxDIB::ConvertFromBitmap(pbi, GetHbitmapOf(bmp)) != 0;
 #else
     wxUnusedVar(buf);
     return false;
